fixed word wrapping

--- a/youranimelist.css
+++ b/youranimelist.css
@@ -12,4 +12,12 @@ figcaption {
 }
 figure {
     display: inline-block;
+    width: min-content;
+}
+body {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+head {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding-left: 35px;
 }
